only shows 10 first items on related lists in order to avoid too big listings

--- a/admin/public/styles/keystone/list.less
+++ b/admin/public/styles/keystone/list.less
@@ -78,6 +78,11 @@
 	margin-top: 30px;
 }
 
+.Relationship__link span {
+  font-size: 14px;
+  float: right;
+}
+
 .Relationship__noresults {
 	color: #999;
 }
